# winsdkfb

./: .gitignore  CMakeLists.txt
winsdkfb/: CMakeLists.txt
winsdkfb/FBWinStoreCsTests/: codegen.cmd
winsdkfb/winsdkfb/winsdkfb.Shared/: ColorLuminosityConverter.cpp  ColorLuminosityConverter.h  FBGraphObjectHeader.ttinclude  FBGraphObjectImplementation.ttinclude  FacebookAccessTokenData.cpp  FacebookAccessTokenData.h  FacebookError.cpp  FacebookError.h  FacebookLoginButton.h  FacebookPaginatedArray.cpp  FacebookPaginatedArray.h  FacebookPermissions.h  FacebookResult.cpp  FacebookResult.h  FacebookSession.cpp  FacebookSession.h  HlsColor.cpp  HlsColor.h  JsonClassFactory.h  ScaleConverter.cpp  ScaleConverter.h  Utility.ttinclude  codegen.cmd  pch.h
winsdkfb/winsdkfb/winsdkfb.Shared/Controls/: FacebookLoginButton.xaml
winsdkfb/winsdkfb_uwp/FBWinStoreCppTests/: FBAccessTokenDataTests.cpp  FBWinStoreCppTests.vcxproj  FBWinStoreCppTests.vcxproj.filters
winsdkfb/winsdkfb_uwp/FBWinStoreCsTests/: FBWinStoreCsTests.nuget.props  project.json
winsdkfb/winsdkfb_uwp/winsdkfb_uwp/: winsdkfb_uwp.vcxproj
